[package]
name = "node-rpc"
version = "0.3.1"
authors = ['Akropolis <admin@akropolis.io>']
edition = "2018"
license = "MIT"

[dependencies]
sc-client = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
jsonrpc-core = "14.0.3"
akropolisos-runtime = { path = "../runtime" }
sp-runtime = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sp-api = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
pallet-contracts-rpc = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
pallet-transaction-payment-rpc = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
substrate-frame-rpc-system = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sp-transaction-pool = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sc-consensus-babe = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sc-consensus-babe-rpc = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sp-consensus-babe = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sc-keystore = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sc-consensus-epochs = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sp-consensus = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sp-blockchain = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }

sc-rpc = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = "https://github.com/paritytech/substrate" }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false }