[package]
authors = ['Akropolis <admin@akropolis.io>']
edition = '2018'
name = 'akropolisos-runtime'
version = '0.5.4'


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
num-traits = { version = "0.2.8", default-features = false }
rustc-hex = { version = "2.0", optional = true }

codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
simple-json = {rev = '49661fd6cf0aed3c9f97d233589d9dd6873827eb', default-features = false, git = 'https://github.com/jimmychu0807/simple-json2' }
aura = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, package = "pallet-aura", git = 'https://github.com/paritytech/substrate.git' }
balances = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, package = "pallet-balances", git = 'https://github.com/paritytech/substrate.git' }
frame-support = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
grandpa = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, package = "pallet-grandpa", git = 'https://github.com/paritytech/substrate.git' }
randomness-collective-flip = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, package = "pallet-randomness-collective-flip", git = 'https://github.com/paritytech/substrate.git' }
sudo = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, package = "pallet-sudo", git = 'https://github.com/paritytech/substrate.git' }
system = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, package = "frame-system", git = 'https://github.com/paritytech/substrate.git' }
timestamp = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate.git' }
transaction-payment = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, package = "pallet-transaction-payment", git = 'https://github.com/paritytech/substrate.git' }
frame-executive = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-block-builder = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-consensus-aura = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-core = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-inherents = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git'}
sp-io = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-offchain = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git'}
sp-runtime = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-session = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-std = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-transaction-pool = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-version = { rev = '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ["std"]
std = [
	"aura/std",
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"randomness-collective-flip/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
]