[package]
authors = ['Akropolis <admin@akropolis.io>']
edition = '2018'
name = 'akropolisos-runtime'
version = '0.5.9'


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
num-traits = { version = "0.2.8", default-features = false }
rustc-hex = { version = "2.0", optional = true }

codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }


#bridge = { version = '0.3.0', default-features = false, path = '../pallets/bridge' }
#dao = { version = '0.3.0', default-features = false, path = '../pallets/dao' }
#marketplace = { version = '0.3.0', default-features = false, path = '../pallets/marketplace' }
#oracle = { version = '0.3.0', default-features = false, path = '../pallets/oracle' }
#token = { version = '0.3.0', default-features = false, path = '../pallets/token' }
#types = { version = '0.3.0', default-features = false, path = '../pallets/types' }

[dependencies.aura]
default-features = false
package = 'pallet-aura'
version = '2.0.0-alpha.6'

[dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '2.0.0-alpha.6'

[dependencies.frame-executive]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.grandpa]
default-features = false
package = 'pallet-grandpa'
version = '2.0.0-alpha.6'

[dependencies.randomness-collective-flip]
default-features = false
package = 'pallet-randomness-collective-flip'
version = '2.0.0-alpha.6'

[dependencies.sp-api]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-block-builder]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-consensus-aura]
default-features = false
version = '0.8.0-alpha.6'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-inherents]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-offchain]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-session]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-transaction-pool]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-version]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sudo]
default-features = false
package = 'pallet-sudo'
version = '2.0.0-alpha.6'

[dependencies.system]
default-features = false
package = 'frame-system'
version = '2.0.0-alpha.6'

[dependencies.timestamp]
default-features = false
package = 'pallet-timestamp'
version = '2.0.0-alpha.6'

[dependencies.transaction-payment]
default-features = false
package = 'pallet-transaction-payment'
version = '2.0.0-alpha.6'

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.5'

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
#    'token/std',
#    'bridge/std',
#    'dao/std',
#    'oracle/std',
#    'marketplace/std',
#    'types/std',
]