[package]
name = "node-transaction-factory"
version = "0.8.0-alpha.5"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[dependencies]
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "1.2.0", features = ["derive"] }

sp-block-builder = { version = "2.0.0-alpha.5", git = 'https://github.com/paritytech/substrate.git' }
sc-cli = { version = "0.8.0-alpha.5", git = 'https://github.com/paritytech/substrate.git' }
sc-client-api = { version = "2.0.0-alpha.5", git = 'https://github.com/paritytech/substrate.git' }
sc-block-builder = { version = "0.8.0-alpha.5", git = 'https://github.com/paritytech/substrate.git' }
sc-client = { version = "0.8.0-alpha.5", git = 'https://github.com/paritytech/substrate.git' }
sp-consensus = { version = "0.8.0-alpha.5", git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = "2.0.0-alpha.5", git = 'https://github.com/paritytech/substrate.git' }
sp-api = { version = "2.0.0-alpha.5", git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "2.0.0-alpha.5", git = 'https://github.com/paritytech/substrate.git' }
sc-service = { version = "0.8.0-alpha.5", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-blockchain = { version = "2.0.0-alpha.5", git = 'https://github.com/paritytech/substrate.git' }
