[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['akropolisos-runtime/std']

[workspace]
members = []

[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Akropolis <admin@akropolis.io>']
edition = '2018'
name = 'akropolisos-runtime-wasm'
version = '1.0.0'

[dependencies.akropolisos-runtime]
default-features = false
path = '..'
